--- a/pages/caigouList/caigouList.wxss
+++ b/pages/caigouList/caigouList.wxss
@@ -1,1 +1,155 @@
 /* pages/caigouList/caigouList.wxss */
+.filterList-sort-list,.all-sort-list,.nearby-sort-son,.nearby-sort-list,.capacity-sort-list,.filterList,.filterList-footer{
+  background: white;
+}
+.filterList-sort-list,.all-sort-list,.nearby-sort-son,.nearby-sort-list,.capacity-sort-list{
+  flex-direction: column;
+  border-top: 1px solid rgba(0,0,0,0);
+  display: flex;
+}
+.filterList-sort,.all-sort,.nearby-sort-son,.nearby-sort,.capacity-sort{
+  font-size: 25rpx;
+  height: 70rpx;
+  line-height: 70rpx;
+  margin-left: 30rpx;
+}
+/* ---------------------------------- */
+.sort-act{
+  color: #EB9035;
+}
+.nearby-sort-list{
+  position: relative;
+  min-height:150px; 
+}
+.nearby-sort-son{
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 50%;
+  /* height: 20rem; */
+  /* background: #eee; */
+}
+.filterList-sort-list{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  padding:0.5rem 0;
+  padding-right: 30rpx;
+}
+.filterList-sort{
+  height: 1.3rem;
+  width: 20%;
+  border: 1px solid #333;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 6px;
+}
+.filterList-act{
+  background: #F5A623;
+  color: #fff
+}
+.filterList-box{
+  padding-top: 1rem;
+  background: #fff;
+}
+/* ---------------------------------- */
+.sort-list{
+  justify-content: space-around;
+  display: flex;
+  background: white;
+  width: 100%;
+  height: 32px;
+  font-size: 27rpx;
+  color: #6A6A6A;
+  align-content: center;
+  border: 1rpx solid #ECECEC;
+  align-items: center;
+}
+.sort{
+  text-align: center;
+  /* margin: auto 0; */
+  height: 100%;
+  line-height: 30px;
+  border-right: 1rpx solid #ECECEC; 
+  flex: 1;
+}
+.sort-active{
+  color: black;
+  font-weight: 800;
+}
+.filterList-characteristic-title{
+  position: relative;
+  height: 50rpx;
+  line-height: 50rpx;
+  background: #FBFBFB;
+  font-weight: 400;
+  padding-left: 30rpx;
+}
+.filterList-characteristic-title::before,
+.filterList-discount-title::before{
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 15rpx;
+  display: inline-block;
+  width: 5rpx;
+  height: 20rpx;
+  background: #FED161;
+}
+.filterList-footer{
+  height: 90rpx;
+  display: flex;
+}
+.filterList-footer-delect{
+  flex: 1;
+  font-size: 25rpx;
+  line-height: 90rpx;
+  padding-left: 30rpx;
+}
+.filterList-footer-finish{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  line-height: 90rpx;
+  font-size: 35rpx;
+  width: 210rpx;
+  background: #FFD161; 
+  position: relative;
+}
+.filterList-footer-finish-number{
+  height: 30rpx;
+  width: 30rpx;
+  line-height: 31rpx;
+  font-size: 25rpx;
+  margin-left: 15rpx;
+  color: #FFD161;
+  border-radius: 50%;
+  background: black; 
+}
+.all-sort-list,.nearby-sort-list,.capacity-sort-list,.filterList-box{
+  display: none;
+}
+.all-sort-list.all-act,.nearby-sort-list.nearby-act,.capacity-sort-list.capacity-act,.filterList-box.filter-act{
+  display: block;
+}
+.mflex {display:flex;}
+.list-head{text-align: center;font-size:32rpx;}
+.list-li{height:166rpx;padding:40rpx 30rpx;border-bottom:2rpx solid #e4e7ec;flex-wrap:wrap;justify-content:space-between;flex-direction:column;align-items:center;}
+.list-img{width:210rpx;height:166rpx;}
+.list-img image{display: block;width:210rpx;height:166rpx;}
+.list-tit,.list-adr,.list-tag,.list-con{width:calc( 100% - 240rpx );}
+.list-tit{font-size:30rpx;color:#1c2627;overflow:hidden;white-space:nowrap;text-overflow:ellipsis;display:inline-block;}
+.list-con{font-size:24rpx;overflow:hidden;white-space:nowrap;text-overflow:ellipsis;}
+.list-adr{font-size:22rpx;color:#555;text-overflow:ellipsis;white-space:nowrap;overflow:hidden; }
+.list-tag{font-size:20rpx;}
+.list-tag text{background:#f5ecdf;color:#ff9d00;padding:5rpx;margin-right:10rpx;}
+.list-money{font-size:30rpx;color:red;flex:1;text-align: right;font-weight:bold;}
+.dizhi{flex:2;text-overflow:ellipsis;white-space:nowrap;overflow:hidden;}
+.list-tag text{color:#fff;}
+.list-tag .tag_0{background:#c3dbf3;}
+.list-tag .tag_1{background:#fbd08f}
+.list-tag .tag_2{background:#fdd2d5;}
+.list-tag .tag_3{background:#add2a5;}
