--- a/component/city-component/city-component.wxml
+++ b/component/city-component/city-component.wxml
@@ -15,7 +15,7 @@
       <view wx:if="{{myCity}}">
         <view class='list-title'>我的位置</view>
         <view class='list-horizontal'>
-          <view class='list-name {{idx === 0 ?"":"border"}}' data-detail="{{city}}" catchtap='locationMt'>
+          <view class='list-name {{idx === 0 ?"":"border"}}' data-detail="{{city}}">
             {{myCity}}
           </view>
         </view>
